SVCDE notes: fixed some small mistakes

--- a/2020_21/SVCDE/notes/notes.tex
+++ b/2020_21/SVCDE/notes/notes.tex
@@ -1501,7 +1501,7 @@ Notation for higher derivatives:
 \begin{theorem}
     The ODE
     \begin{align*}
-        \mu(x,y)M(x,y)+\mu(x,y)N(x,yu)\frac{dy}{dx}=0
+        \mu(x,y)M(x,y)+\mu(x,y)N(x,y)\frac{dy}{dx}=0
     \end{align*}
     is exact if and only if
     \begin{align*}
@@ -1509,7 +1509,7 @@ Notation for higher derivatives:
     \end{align*}
     i.e., if and only if
     \begin{align*}
-        M\mu_y - N\mu_x + (M_y + N_x)\mu = 0.
+        M\mu_y - N\mu_x + (M_y - N_x)\mu = 0.
     \end{align*}
 \end{theorem}
 
