Added mkthms command from preamble

--- a/2019_20/CAP/notes/notes.tex
+++ b/2019_20/CAP/notes/notes.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage{notes-preamble}
-
+\mkthms
 \begin{document}
 \title{Calculus and its Applications (SEM2)}
 \author{Franz Miltz}
