--- a/2019_20/INF1A/FP/lecture-notes/notes.tex
+++ b/2019_20/INF1A/FP/lecture-notes/notes.tex
@@ -1,7 +1,8 @@
 \documentclass{article}
 \usepackage{notes-preamble}
+\mkthms
 \begin{document}
-\title{INF1A: Introduction to Computation (SEM1)}
+\title{INF1A: Functional Programming (SEM1)}
 \author{Franz Miltz}
 \date{07 September 2019}
 \maketitle
