--- a/2020_21/INF2-FDS/notes/notes.tex
+++ b/2020_21/INF2-FDS/notes/notes.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 \usepackage{notes-preamble}
-
+\mkthms
 \begin{document}
 \title{Foundations of Data Science (YEAR2)}
 \author{Franz Miltz}
