--- a/2020_21/SVCDE/notes/notes.tex
+++ b/2020_21/SVCDE/notes/notes.tex
@@ -1,5 +1,6 @@
 \documentclass{article}
 \usepackage{notes-preamble}
+\mkthms
 \begin{document}
 \title{Several Variable Calculus and Differential Equations (SEM3)}
 \author{Franz Miltz}
